[package]
name = "web-voyager-judger"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
dotenv-vault = "0.1.1"
nix = { version = "0.27.1", features = ["process", "resource", "fs", "signal"] }
