[package]
name = "web-voyager-judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.27.1", features = ["process", "resource", "fs", "signal", "user"] }
dotenvy = "0.15.7"
seccompiler = "0.4.0"
log = "0.4.20"
env_logger = "0.10.1"
